# molclip

./: .gitignore  README.md  pyproject.toml  train.sh
src/molclip/: __init__.py  config.py  data.py  data_augmentation.py  feature.py  model.py  type.py  utils.py
src/scripts/: infer.py  train.py
