[project]
name = "molclip"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "koh", email = "kohbanye@gmail.com" }
]
dependencies = [
    "mlx-graphs>=0.0.7",
    "mlx>=0.10.0",
    "mlx-lm>=0.17.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/molclip"]
